Use variables for azure storage/container names

--- a/.github/workflows/build-and-deploy-to-azure.yml
+++ b/.github/workflows/build-and-deploy-to-azure.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   IMAGE_TAG: latest
-  AZURE_STORAGE_ACCOUNT_NAME: <your-account-name>
-  AZURE_STORAGE_CONTAINER_NAME: <your-container-name>
+  AZURE_STORAGE_ACCOUNT_NAME: ${{ env.AZURE_STORAGE_ACCOUNT_NAME }}
+  AZURE_STORAGE_CONTAINER_NAME: ${{ env.AZURE_STORAGE_CONTAINER_NAME }}
   AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
 
 jobs:
