--- a/.github/workflows/dev-ci-azure.yml
+++ b/.github/workflows/dev-ci-azure.yml
@@ -5,9 +5,12 @@ on:
     branches:
       - dev
 
+permissions:
+      id-token: write
+      contents: read
+      
 env:
   IMAGE_TAG: latest
-  AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
 
 jobs:
   build:
@@ -23,8 +26,13 @@ jobs:
       - name: Copy assets from builder
         run: docker create --name oca-browser-container oca-browser:$IMAGE_TAG && docker cp oca-browser-container:/app/dist ./ && docker rm oca-browser-container
 
-      - name: Upload to blob storage
-        uses: azure/CLI@v1
+      - name: 'Az CLI login'
+        uses: azure/login@v1
         with:
-          inlineScript: |
-            az storage blob upload-batch --connection-string "${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}" --account-name ${{ vars.AZURE_STORAGE_ACCOUNT_NAME }} --destination ${{ vars.AZURE_STORAGE_CONTAINER_NAME }} --source ./dist --pattern "*"
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Upload to blob storage
+        run: |
+            az storage blob upload-batch --auth-mode login --account-name ${{ vars.AZURE_STORAGE_ACCOUNT_NAME }} --destination ${{ vars.AZURE_STORAGE_CONTAINER_NAME }} --source ./dist --pattern "*" --overwrite
